--- a/src/main/docker/docker-compose.yml
+++ b/src/main/docker/docker-compose.yml
@@ -13,9 +13,11 @@ services:
       MARIADB_PASSWORD: 'password'
       # Password for root access
       MARIADB_ROOT_PASSWORD: 'admin'
+
+
 #    environment:
 #      image: mysql:latest
-#      MYSQL_DATABASE: 'animedb'
+#      MYSQL_DATABASE: 'anime'
 #      # So you don't have to use root, but you can if you like
 #      MYSQL_USER: 'user'
 #      # You can use whatever password you like
